--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -118,7 +118,7 @@
     \subsection*{Report}
     \begin{enumerate}
         \item How many apache2 processes were started?
-        Which one was the master server, and which ones were the child servers? (\texttt{use \textbf{htop} to see process hierarchy})
+        Which one was the master server, and which ones were the child servers? (\texttt{use \textbf{htop} and switch to \textbf{tree} to see process hierarchy})
         Justify your answer using the \texttt{apache2.conf} file.
         \item What is the purpose of initiating multiple apache2 processes?
     \end{enumerate}
