--- a/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
+++ b/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
@@ -1,139 +1,22 @@
-\documentclass[10pt,a4paper]{article}
-\usepackage{arabtex}
-\usepackage[OT1,T1,LFE,LAE]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage[arabic,english,farsi]{babel}
-\usepackage{amsmath,amsfonts} % Math packages
-\usepackage{amssymb}
-%\usepackage{cmap}
+\documentclass{../UTNetLab}
 
-\usepackage{multicol}
-
-\usepackage{graphicx}
-\usepackage[caption=false]{subfig}
-\usepackage{color}
-\usepackage{float}
-\usepackage{sidecap}
-%\sidecaptionvpos{figure}{c}
-\usepackage{anysize}
-\marginsize{2cm}{2cm}{2cm}{2cm}
-
-\usepackage{listings}
-
-\usepackage{appendix}
-%\renewcommand{\appendixname}{Apéndices}
-%\renewcommand{\appendixtocname}{Apéndices}
-%\renewcommand{\appendixpagename}{Apéndices}
-
-\usepackage[colorlinks=true,plainpages=true,citecolor=blue,linkcolor=blue,urlcolor=cyan]{hyperref}
-%\usepackage{hyperref}
-
-
-%%% Equation and float numbering
-\numberwithin{equation}{section}
-\numberwithin{figure}{section}
-\numberwithin{table}{section}
-
-
-\newcommand{\horrule}[1]{\rule{\linewidth}{#1}}    % Horizontal rule
-
-\newcommand{\titleText}{Bridges, LANs and the Cisco IOS \\ Laboratory Manual}
-
-\title{
-\normalsize In the name of Allah\\
-\vspace{10pt}
-\LARGE\FR{بسم \allah\  الرحمن الرحیم}
-\vspace{10pt}
-\begin{center}
-    %	\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
-    \begin{minipage}{0.48\textwidth}
-        \begin{flushleft}
-            \includegraphics[height=64pt,width=64pt]{../img/logo.png}
-        \end{flushleft}
-    \end{minipage}
-    \begin{minipage}{0.48\textwidth}
-        \begin{flushright}
-            \includegraphics[height=64pt]{../img/eng-logo.png}
-        \end{flushright}
-    \end{minipage}
-\end{center}
-\vspace*{-64pt}
-%	\horrule{0.5pt} \\[0.4cm]
-\huge \titleText\\
-\vspace{40pt}
-%	\horrule{2pt} \\[0.5cm]
+\title{Bridges, LANs and the Cisco IOS}
+\authorshort{A. Khonsari, A. HajiAliKhamseh'i, M. Borhani, A. Khordadi, S. KashiPazha}
+\author{%
+    Dr. Ahmad Khonsari - \FR{دکتر احمد خونساری}\\
+    \href{mailto:a_khonsari@ut.ac.ir}{a\_khonsari@ut.ac.ir}\\
+    \vskip 1.5em%
+    Amir Haji Ali Khamseh'i - \FR{امیر حاجی‌علی‌خمسه‌ء}\\
+    \href{mailto:khamse@ut.ac.ir}{khamse@ut.ac.ir}\\
+    \vskip 1.5em%
+    \href{mailto:m.borhani@ut.ac.ir}{Muhammad Borhani} - \FR{محمد برهانی}\\
+    \href{mailto:a.a.khordadi@ut.ac.ir}{Amirahmad Khordadi} - \FR{امیراحمد خردادی}\\
+    \href{mailto:sina\_kashipazha@ut.ac.ir}{Sina Kashi pazha} - \FR{سینا کاشی‌پزها}
 }
-\author{
-\huge University of Tehran\\
-\LARGE \FR{دانشگاه تهران}\\
-\\
-\LARGE School of Electrical and Computer Engineering\\
-\FR{دانشکده مهندسی برق و کامپیوتر}\\
-\\
-\Large Computer Network Lab\\
-\FR{آزمایشگاه شبکه‌های کامپیوتری}\\
-\\
-\\
-\\
-\normalfont
-Dr. Ahmad Khonsari - \FR{احمد خونساری}\\
-\href{mailto:a_khonsari@ut.ac.ir}{a\_khonsari@ut.ac.ir}\\
-\\
-\normalsize
-Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
-\href{mailto:khamse@ut.ac.ir}{khamse@ut.ac.ir}\\
-\\
-\normalsize \href{mailto:m.borhani@ut.ac.ir}{Muhammad Borhani} - \FR{محمد برهانی}\\
-\normalsize \href{mailto:a.a.khordadi@ut.ac.ir}{Amirahmad Khordadi} - \FR{امیراحمد خردادی}\\
-\normalsize \href{mailto:sina\_kashipazha@ut.ac.ir}{Sina Kashi pazha} - \FR{سینا کاشی پزها}
-}
-
-\date{\vspace{30pt}\today\\\vspace{10pt}{\selectlanguage{farsi}\today}}
-
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-%\pagestyle{fancyplain}
-\fancyhf{}
-\fancyhead[L]{\footnotesize Computer Network Lab \\ \FR{آزمایشگاه شبکه‌های کامپیوتری}}
-\fancyhead[R]{\footnotesize \titleText}
-\fancyfoot[R]{\footnotesize School of Electrical and Computer Engineering\\\FR{دانشکده مهندسی برق و کامپیوتر}}
-\fancyfoot[C]{\thepage}
-\fancyfoot[L]{\footnotesize University of Tehran \\ \FR{دانشگاه تهران}}
-\renewcommand{\footrulewidth}{0.8pt}
-\renewcommand{\headrulewidth}{1pt}            % Remove header underlines
-\renewcommand{\footrulewidth}{1pt}                % Remove footer underlines
-\setlength{\headheight}{13.6pt}
-
-\usepackage{tikz}
-\usetikzlibrary{calc}
 
 \begin{document}
     \selectlanguage{english}
-
-    %\vspace*{-1.5cm}
     \maketitle
-
-    %\tableofcontents
-
-    \pagebreak
-    %Arabic \AR{\allah}
-    %Persian \FR{فروشگاه}
-    %Arabic \foreignlanguage{arabic}{كحض}
-    %Persian \foreignlanguage{farsi}{فروشگاه}
-
-
-
-    %	يعود تاريخ علوم الحاسوب إلى
-    %\chapter
-    %\section
-    %\subsubsection
-    %\subsection
-    %\section
-    %\chapter
-    %\part
-    %\caption
-    %\end{otherlanguage}
-
 
 \section*{Exercises on Cisco IOS}
     Each group in the lab uses two workstations, a bridge, and two hubs, which are required to be connected as shown in Fig. 3.7, Table 3.2 and Table 3.3.
@@ -314,14 +197,3 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
     Next, start a web browser (e.g., \texttt{Mozilla} in Linux, or \texttt{Hotjava} in Solaris) in your host, and enter the IP address of the router interface. When prompted, enter \texttt{netlab} for password, and leave the \texttt{User Name} field blank. Then you can browse the router configuration web pages and configure the router there.
 
 \end{document}
-
-
-
-
-
-
-
-
-
-
-
