change appearance of authors' name

--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -1,17 +1,36 @@
 \documentclass{../UTNetLab}
 
 \title{Static and Dynamic Routing}
-\authorshort{A. Khonsari, A. HajiAliKhamseh'i, M. Borhani, A. Khordadi, S. KashiPazha}
+\authorshort{A. Khonsari, A. HajiAliKhamseh'i, M. Borhani, A. Khordadi, S. Kashipazha}
 \author{%
-    Dr. Ahmad Khonsari - \FR{دکتر احمد خونساری}\\
-    \href{mailto:a_khonsari@ut.ac.ir}{a\_khonsari@ut.ac.ir}\\
-    \vskip 1.5em%
-    Amir Haji Ali Khamseh'i - \FR{امیر حاجی‌علی‌خمسه‌ء}\\
-    \href{mailto:khamse@ut.ac.ir}{khamse@ut.ac.ir}\\
-    \vskip 1.5em%
-    \href{mailto:m.borhani@ut.ac.ir}{Muhammad Borhani} - \FR{محمد برهانی}\\
-    \href{mailto:a.a.khordadi@ut.ac.ir}{Amirahmad Khordadi} - \FR{امیراحمد خردادی}\\
-    \href{mailto:sina\_kashipazha@ut.ac.ir}{Sina Kashi pazha} - \FR{سینا کاشی‌پزها}
+    Dr. Ahmad Khonsari\\
+    \FR{دکتر احمد خونساری}\\
+    \mail{a\_khonsari@ut.ac.ir}
+    \end{tabular}\vskip 1em
+    \begin{tabular}[t]{c}
+    Amir Haji Ali Khamseh'i\\
+    \FR{امیر حاجی‌علی‌خمسه‌ء}\\
+    \mail{khamse@ut.ac.ir}
+    \and
+    {Muhammad Borhani}\\
+    \FR{محمد برهانی}\\
+    \mail{m.borhani@ut.ac.ir}
+    \and
+    {AmirAhmad Khordadi}\\
+    \FR{امیراحمد خردادی}\\
+    \mail{a.a.khordadi@ut.ac.ir}
+    \and
+    {Sina Kashipazha}\\
+    \FR{سینا کاشی‌پزها}\\
+    \mail{sina\_kashipazha@ut.ac.ir}
+    \and
+    {Hadi Safari}\\
+    \FR{هادی صفری}\\
+    \mail{hadi.safari@ut.ac.ir}
+    \and
+    % {alii}\\
+    % \FR{دیگران}\\
+    % \mail{info@example.com}
 }
 
 \begin{document}
